fix dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,30 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.App {
+  height: 100%;
+}
+
+#root {
+  height: 100%;
+}
+
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+
+}
+
+.app-bg {
+  flex: 1 0 auto;
+  height: 100%;
+}
+
+footer {
+  flex-shrink: 0
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
